@@ -30,25 +30,36 @@ Action* AnimalController::decideAction(int framerate)
 		break;
 	default:
 		//Check if its already time for a new decicion
-		if (decisionCooldown >= DECICION_COOLDOWN_THRESHOLD)
+		if (decisionCooldown >= DECICION_COOLDOWN_THRESHOLD_STANDARD)
 		{
 			decisionCooldown = 0;
+			Animal* animal = (Animal*)entity;
 
-			if (((Animal*)entity)->getAction() == NULL)
+			//Check if action pointer is clear
+			if (animal->getAction() == NULL)
 			{
+
+				//Give a random movement action with 33% probability
 				if (Functions::calculateRandomBoolean(33))
 				{
+
+					//Move left or right with 50% probability
 					if (Functions::calculateRandomBoolean(50))
 					{
 						action = new MovementAction(entity, ((Animal*)entity)->MAX_MOVEMENT_ONE_STEP, 0);
-
+						animal->setActionStatus(AnimalEnumeration::ANIMAL_ACTION_MOVING);
 					}
 					else
 					{
 						action = new MovementAction(entity, (-1)*((Animal*)entity)->MAX_MOVEMENT_ONE_STEP, 0);
+						animal->setActionStatus(AnimalEnumeration::ANIMAL_ACTION_MOVING);
 					}
 
-					((Animal*)entity)->setAction(action);
+					animal->setAction(action);
+				}
+				else
+				{
+					animal->setActionStatus(AnimalEnumeration::ANIMAL_ACTION_IDLE); //Otherwise set idle
 				}
 			}
 		}
