@@ -7,10 +7,19 @@ namespace EntityConstants
 	static const int APPLETREE_FRAME_COUNT = 8;
 	static const int APPLETREE_FRAME_CENTER_OFFSET = 20;
 	static const int APPLETREE_WEIGHT = 2000;
+	static const double APPLETREE_MAX_OWN_ACCELERATION = 0;
 
 	static const int CHICKEN_FRAME_WIDTH = 16;
 	static const int CHICKEN_FRAME_HEIGHT = 8;
 	static const int CHICKEN_FRAME_COUNT = 10;
 	static const int CHICKEN_FRAME_CENTER_OFFSET = 5;
 	static const int CHICKEN_WEIGHT = 1;
+	static const double CHICKEN_MAX_OWN_ACCELERATION = 0.35;
+
+	static const int FOX_FRAME_WIDTH = 32;
+	static const int FOX_FRAME_HEIGHT = 16;
+	static const int FOX_FRAME_COUNT = 4;
+	static const int FOX_FRAME_CENTER_OFFSET = 10;
+	static const int FOX_WEIGHT = 5;
+	static const double FOX_MAX_OWN_ACCELERATION = 1;
 }
