@@ -8,7 +8,8 @@ namespace TexturesEnumeration
 		TEXTURE_EMPTY=0,
 		TEXTURE_EARTH,
 		TEXTURE_TREE,
-		TEXTURE_CHICKEN,
+		TEXTURE_CHICKEN, 
+		TEXTURE_FOX,
 		TEXTURE_GRASS_1,
 		TEXTURE_SUN,
 		TEXTURES_COUNT
